--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@ margin: auto;
       <button style="background: blue; color: white;">Register</button>
     </div>
 
-    <div class="banner-image" "><img src="img/banner.gif" alt="" style="max-width: 100%;"></div>
+    <div class="banner-image" "><img src="banner.gif" alt="" style="max-width: 100%;"></div>
   </div>
 </body>
+
 </html>
